pkginclude_HEADERS = \
    Exceptions.h  \
    AnalysisObject.h \
    Fillable.h Binned.h Scatter.h \
    Weights.h \
    Bin.h \
    Dbn0D.h Dbn1D.h Dbn2D.h Dbn3D.h \
    Axis1D.h Bin1D.h \
    Axis2D.h Bin2D.h \
    Counter.h \
    Histo1D.h HistoBin1D.h  \
    Histo2D.h HistoBin2D.h  \
    Profile1D.h ProfileBin1D.h \
    Profile2D.h ProfileBin2D.h \
    Point.h \
    Scatter1D.h Point1D.h \
    Scatter2D.h Point2D.h \
    Scatter3D.h Point3D.h \
    ScatterND.h PointND.h ErrorND.h \
    Index.h \
    Writer.h WriterAIDA.h WriterFLAT.h WriterYODA.h \
    Reader.h ReaderAIDA.h ReaderYODA.h ReaderFLAT.h \
    YODA.h IO.h ROOTCnv.h

nobase_pkginclude_HEADERS = \
	ReaderMethods.icc \
	WriterMethods.icc \
	Utils/StringUtils.h \
	Utils/MathUtils.h \
	Utils/Formatting.h \
	Utils/Predicates.h \
	Utils/BinSearcher.h \
	Utils/Traits.h \
	Utils/sortedvector.h \
	Utils/cachedvector.h \
	Utils/indexedset.h \
	Utils/ndarray.h \
	Utils/fastlog.h \
	Utils/getline.h \
	Config/YodaConfig.h \
	Config/BuildConfig.h
