EXTRA_DIST = \
     ghost-extent-y3.pdf \
     ghost-extent-y3.eps \
     ghost-extent-y4.eps \
     ghost-extent-y4.pdf \
     fj31-best-strategy-manual-akt.eps \
     fj31-best-strategy-manual-akt.pdf \
     fj31-best-strategy-manual-cam.eps \
     fj31-best-strategy-manual-cam.pdf \
     fj31-best-strategy-manual-kt.eps  \
     fj31-best-strategy-manual-kt.pdf  \
     fj31_timings_best_R04.eps	       \
     fj31_timings_best_R04.pdf	       \
     fj31_timings_best_R12.eps	       \
     fj31_timings_best_R12.pdf        

